# jira-llm-pipeline

./: .gitignore  QUICK_START.md  README.md  SUBMISSION_GUIDE.md  TEST_COMMANDS.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/workflows/: ci-cd.yml
data/corpus/: test_corpus.jsonl  test_output.jsonl
data/raw/: HADOOP-125.json  HADOOP-129.json  HADOOP-132.json  HADOOP-139.json  HADOOP-149.json  HADOOP-151.json  HADOOP-160.json  HADOOP-166.json  HADOOP-167.json  HADOOP-17.json  HADOOP-172.json  HADOOP-184.json  HADOOP-190.json  HADOOP-191.json  HADOOP-194.json  HADOOP-198.json  HADOOP-209.json  HADOOP-211.json  HADOOP-219.json  HADOOP-22.json  HADOOP-220.json  HADOOP-228.json  HADOOP-229.json  HADOOP-235.json  HADOOP-241.json  HADOOP-245.json  HADOOP-246.json  HADOOP-269.json  HADOOP-272.json  HADOOP-274.json  HADOOP-276.json  HADOOP-277.json  HADOOP-30.json  HADOOP-34.json  HADOOP-36.json  HADOOP-40.json  HADOOP-41.json  HADOOP-42.json  HADOOP-44.json  HADOOP-5.json  (+10 more)
data/raw/HADOOP/: HADOOP-125.json  HADOOP-129.json  HADOOP-132.json  HADOOP-139.json  HADOOP-149.json  HADOOP-151.json  (+44 more)
monitoring/: prometheus.yml
scripts/: run_full_pipeline.sh  test_setup.py
src/: __init__.py  cli.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  issue.py
src/scraper/: __init__.py  middlewares.py  settings.py  spider.py
src/transform/: __init__.py  corpus_builder.py  prompts.py
src/utils/: __init__.py  logger.py  redis.py  state.py
tests/: __init__.py
tests/integration/: test_scraper.py
tests/unit/: test_prompts.py  test_validation.py
(+3 files in other folders)
